[package]
name = "trunk-toolbox"
# build.rs bypasses package.version, instead using $HORTON_RELEASE and falls back to the current ref
version = "0.0.0"
authors = ["horton <horton@trunk.io>"]
license = "MIT"
description = "trunk custom issue finder"
readme = "README.md"
edition = "2021"
build = "build.rs"

[lib]
name = "horton"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.64"
clap = { version = "4.0.8", features = ["derive"] }
env_logger = "0.9.1"
git2 = { version = "0.15", default-features = false }
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
serde-sarif = "0.3.4"
content_inspector = "0.2.4"
rayon = "1.5.1"
confique = "0.2.5"
glob = "0.3.1"
glob-match = "0.2.1"

[dev-dependencies]
assert_cmd = "2.0"
function_name = "0.2.0"
predicates = "2.1"
spectral = "0.6.0"
tempfile = "3.3.0"

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dev.package."*"]
opt-level = 3
debug = true
incremental = true

[profile.dev]
opt-level = 0
debug = true
incremental = true
